--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let beer of beers">
-  <app-beer-card></app-beer-card>
-</div>
+
+<ng-container *ngIf="beers">
+  <div *ngFor="let beer of beers">
+    <app-beer-card [beer]="beer"></app-beer-card>
+  </div>
+</ng-container>
