admin page beer add form and beer list data trasnfer working

--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,1 +1,4 @@
 <button (click)="logout()">Logout</button>
+
+<app-beer-form [beerToEdit]="beerToEdit"></app-beer-form>
+<app-beer-list (selectedBeer)="editBeer($event)"></app-beer-list>
