more css to admin page

--- a/src/app/components/beer-form/beer-form.component.html
+++ b/src/app/components/beer-form/beer-form.component.html
@@ -2,8 +2,8 @@
 
     <!-- beer name -->
     <div class="field" [ngClass]="{'has-error': feedbackEnabled && nameField.errors}">
-      <label>Name</label>
-      <input autocomplete="off" type="text" name="name" [(ngModel)]="beerToEdit.name" #nameField="ngModel" required [disabled]="processing"/>
+      <label>Name<span class="required">*</span></label>
+      <input placeholder="beer name" autocomplete="off" type="text" name="name" [(ngModel)]="beerToEdit.name" #nameField="ngModel" required [disabled]="processing"/>
       <div *ngIf="feedbackEnabled && nameField.errors">
         <p *ngIf="nameField.errors.required" class="validation">name required</p>
       </div>
@@ -12,8 +12,8 @@
     <!-- beer style -->
 
     <div class="field" [ngClass]="{'has-error': feedbackEnabled && styleField.errors}">
-      <label>Style</label>
-      <input autocomplete="off" type="text" name="style" [(ngModel)]="beerToEdit.style" #styleField="ngModel" required [disabled]="processing"/>
+      <label>Style<span class="required">*</span></label>
+      <input placeholder="lager, ipa, stout" autocomplete="off" type="text" name="style" [(ngModel)]="beerToEdit.style" #styleField="ngModel" required [disabled]="processing"/>
       <div *ngIf="feedbackEnabled && styleField.errors">
         <p *ngIf="styleField.errors.required" class="validation">style required</p>
       </div>
@@ -21,8 +21,8 @@
 
     <!-- beer abv -->
     <div class="field" [ngClass]="{'has-error': feedbackEnabled && abvField.errors}">
-        <label>Abv</label>
-        <input autocomplete="off" type="number" name="abv" [(ngModel)]="beerToEdit.abv" #abvField="ngModel" required [disabled]="processing"/>
+        <label>Abv<span class="required">*</span></label>
+        <input placeholder="alcohol percent" autocomplete="off" type="number" name="abv" [(ngModel)]="beerToEdit.abv" #abvField="ngModel" required [disabled]="processing"/>
         <div *ngIf="feedbackEnabled && abvField.errors">
           <p *ngIf="abvField.errors.required" class="validation">abv required</p>
         </div>
@@ -31,13 +31,13 @@
     <!-- beer ibu -->
     <div class="field" [ngClass]="{'has-error': feedbackEnabled && ibuField.errors}">
         <label>Ibu</label>
-        <input autocomplete="off" type="number" name="ibu" [(ngModel)]="beerToEdit.ibu" #ibuField="ngModel" [disabled]="processing"/>
+        <input placeholder="bitterness units" autocomplete="off" type="number" name="ibu" [(ngModel)]="beerToEdit.ibu" #ibuField="ngModel" [disabled]="processing"/>
       </div>
 
     <!-- beer brewery -->
     <div class="field" [ngClass]="{'has-error': feedbackEnabled && breweryField.errors}">
-        <label>Brewery</label>
-        <input autocomplete="off" type="text" name="brewery" [(ngModel)]="beerToEdit.brewery" #breweryField="ngModel" required [disabled]="processing"/>
+        <label>Brewery<span class="required">*</span></label>
+        <input placeholder="brewery name" autocomplete="off" type="text" name="brewery" [(ngModel)]="beerToEdit.brewery" #breweryField="ngModel" required [disabled]="processing"/>
         <div *ngIf="feedbackEnabled && breweryField.errors">
           <p *ngIf="breweryField.errors.required" class="validation">brewery required</p>
         </div>
@@ -45,8 +45,8 @@
 
     <!-- beer country -->
     <div class="field" [ngClass]="{'has-error': feedbackEnabled && countryField.errors}">
-        <label>Country</label>
-        <input autocomplete="off" type="text" name="country" [(ngModel)]="beerToEdit.country" #countryField="ngModel" required [disabled]="processing"/>
+        <label>Country<span class="required">*</span></label>
+        <input placeholder="origin country" autocomplete="off" type="text" name="country" [(ngModel)]="beerToEdit.country" #countryField="ngModel" required [disabled]="processing"/>
         <div *ngIf="feedbackEnabled && countryField.errors">
           <p *ngIf="countryField.errors.required" class="validation">country required</p>
         </div>
@@ -55,12 +55,12 @@
 
       <!-- beer color -->
       <div class="field inline" [ngClass]="{'has-error': feedbackEnabled && colorField.errors}">
-        <label>Color</label>
-        <select name="color" [(ngModel)]="beerToEdit.color" #colorField="ngModel" required [disabled]="processing">
-          <option value="#e7c61d">Light</option>
-          <option value="#b95c1d">Blond</option>
-          <option value="#950000">Red</option>
-          <option value="#251912">Dark</option>
+        <label>Color<span class="required">*</span></label>
+        <select name="color" [(ngModel)]="beerToEdit.color" [ngStyle]="{'background': beerToEdit.color}" #colorField="ngModel" required [disabled]="processing">
+          <option value="#e7c61d" [ngStyle]="{'background': '#e7c61d'}"></option>
+          <option value="#b95c1d" [ngStyle]="{'background': '#b95c1d'}"></option>
+          <option value="#950000" [ngStyle]="{'background': '#950000'}"></option>
+          <option value="#251912" [ngStyle]="{'background': '#251912'}"></option>
         </select>
         <div *ngIf="feedbackEnabled && colorField.errors">
           <p *ngIf="colorField.errors.required" class="validation">color required</p>
@@ -70,7 +70,7 @@
 
       <!-- beer active -->
       <div class="field inline" [ngClass]="{'has-error': feedbackEnabled && activeField.errors}">
-        <label>Status</label>
+        <label>Status<span class="required">*</span></label>
 
         <select autocomplete="off" type="checkbox" name="active" [(ngModel)]="beerToEdit.active" #activeField="ngModel" required [disabled]="processing">
           <option [ngValue]="true">On tap</option>
@@ -83,19 +83,19 @@
 
       <!-- beer price -->
       <div class="field inline" [ngClass]="{'has-error': feedbackEnabled && priceField.errors}">
-          <label>Price</label>
-          <input autocomplete="off" type="number" name="price" [(ngModel)]="beerToEdit.price" #priceField="ngModel" required [disabled]="processing"/>
+          <label>Price<span class="required">*</span></label>
+          <input placeholder="pint" class="pricefield" autocomplete="off" type="number" name="price" [(ngModel)]="beerToEdit.price" #priceField="ngModel" required [disabled]="processing"/>
           <div *ngIf="feedbackEnabled && priceField.errors">
             <p *ngIf="priceField.errors.required" class="validation">price required</p>
           </div>
         </div>
 
-    <div class="field submit">
-      <button *ngIf="!beerToEdit._id" type="submit" [disabled]="processing">Create</button>
-      <button *ngIf="beerToEdit._id" type="button" [disabled]="processing" (click)="submitEdit(form)">Save</button>
+    <div class="field">
+      <button class="btn submit" *ngIf="!beerToEdit._id" type="submit" [disabled]="processing">Add new beer</button>
+      <button class="btn edit" *ngIf="beerToEdit._id" type="button" [disabled]="processing" (click)="submitEdit(form)">Save changes</button>
+      <button class="btn clear" type="button" (click)="clearForm()">Clear fields</button>
       <div *ngIf="feedbackEnabled && form.invalid">
         <p class="validation">there are errors in the form, please review the fields</p>
       </div>
     </div>
   </form>
-  <button (click)="clearForm()">Clear</button>
