--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ body {
 body {
   text-transform: uppercase;
   background: #343334;
-  color: white;
+  color: rgb(240, 240, 240);
   font-family: goboldbold;
   font-size: 20px;
   line-height: 147%;
@@ -45,7 +45,7 @@ p {
 /* ---- layout ---- */
 
 #site-main {
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 .container {
@@ -57,19 +57,35 @@ p {
   padding-top: 20px;
 }
 
-/* @media (min-width: 768px) {
+button:hover {
+  color: white;
+}
+
+hr {
+  margin: 35px 0;
+}
+
+@media (min-width: 768px) {
   .container {
     max-width: 728px;
     margin: 0 auto;
   }
-} */
-
-
-
+}
 
 /* ---- components ---- */
 
 /* Forms */
+
+form .form-fields-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+form .form-fields {
+  width: 50%;
+  min-width: 250px;
+}
 
 form label {
   display: block;
@@ -77,11 +93,10 @@ form label {
 
 form input {
   color: #e7c61d;
-  margin-left: 15px;
   background: none;
   border: none;
-  border-bottom: 1px solid #e7c61d;
-  width: 90%;
+  border-bottom: 1px solid;
+  width: 100%;
   font-family: inherit;
   font-size: inherit;
   margin-bottom: 20px;
@@ -92,11 +107,19 @@ form button:focus {
   outline: none;
 }
 
-form .inline {
-  display: inline-block;
-  margin-right: 30px;
+form .inline-items-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
   margin-bottom: 20px;
-  width: 25%;
+}
+
+form .inline {
+  width: 100%;
+}
+
+form .inline.active-field {
+  margin: 0 10px;
 }
 
 form select {
@@ -106,11 +129,11 @@ form select {
   text-transform: inherit;
 }
 
-form .btn {
+form .btn,
+#admin-header button {
   display: inline-block;
-  margin: 5px;
   padding: 10px;
-  width: 45%;
+  width: 48%;
   border: 1px solid #251912;
   font-family: inherit;
   text-transform: inherit;
@@ -126,9 +149,53 @@ form .btn.edit {
 }
 
 form .btn.clear {
+  float: right;
   background: #950000;
 }
 
 form span.required {
   color: red;
+}
+
+/* Admin page */
+
+#admin-header {
+  margin-bottom: 10px;
+}
+
+#admin-header h2 {
+  margin-top: 5px;
+}
+
+#admin-header h3 {
+  display: inline-block;
+  margin: 0;
+}
+
+#admin-header button {
+  background: red;
+  margin-left: 20px;
+  width: 100px;
+  padding: 0;
+  float: right;
+}
+
+/* Admin page / beer list */
+
+.beer-list-slot {
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.beer-list-slot:hover {
+  box-shadow: 0px 0px 15px #ffffff;
+}
+
+.list-beer-info {
+  font-size: 80%;
+  display: block;
+}
+
+.list-beer-info p {
+  display: inline-block;
 }
