--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,17 +1,21 @@
-<form (ngSubmit)="submitForm(form)" #form="ngForm" novalidate [ngClass]="{'is-processing': processing}">
+<div class="section">
+  <div class="login container">
+    <form (ngSubmit)="submitForm(form)" #form="ngForm" novalidate [ngClass]="{'is-processing': processing}">
 
-    <div class="field" [ngClass]="{'has-error': feedbackEnabled && passwordField.errors}">
-        <label>...</label>
-        <input type="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required [disabled]="processing"/>
-        <div *ngIf="feedbackEnabled && passwordField.errors">
-          <p *ngIf="passwordField.errors.required" class="validation">password required</p>
+        <div class="field" [ngClass]="{'has-error': feedbackEnabled && passwordField.errors}">
+            <label>Login with your venue's admin password.</label>
+            <input type="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required [disabled]="processing"/>
+            <div *ngIf="feedbackEnabled && passwordField.errors">
+              <p *ngIf="passwordField.errors.required" class="validation">password required</p>
+            </div>
+          </div>
+
+        <div class="field submit">
+          <button type="submit" [disabled]="processing">Login</button>
+          <div *ngIf="feedbackEnabled && form.invalid">
+            <p class="validation">there are errors in the form, please review the fields</p>
+          </div>
         </div>
-      </div>
-
-    <div class="field submit">
-      <button type="submit" [disabled]="processing">Login</button>
-      <div *ngIf="feedbackEnabled && form.invalid">
-        <p class="validation">there are errors in the form, please review the fields</p>
-      </div>
-    </div>
-  </form>
+      </form>
+  </div>
+</div>
