--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,9 +1,11 @@
-<div id="admin-header">
-  <h2>{{venue.name}}'s Admin panel</h2>
-  <h3>Beer manager</h3>
-  <button (click)="logout()">Logout</button>
-</div>
+<div class="container">
+  <div id="admin-header">
+    <h2>{{venue.name}}'s Admin panel</h2>
+    <h3>Beer manager</h3>
+    <button (click)="logout()">Logout</button>
+  </div>
 
-<app-beer-form [beerToEdit]="beerToEdit"></app-beer-form>
-<hr>
-<app-beer-list (selectedBeer)="editBeer($event)"></app-beer-list>
+  <app-beer-form [beerToEdit]="beerToEdit"></app-beer-form>
+  <hr>
+  <app-beer-list (selectedBeer)="editBeer($event)"></app-beer-list>
+</div>
