anchor links to home screen on login & admin page

--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,8 +1,13 @@
 <div class="container">
   <div id="admin-header">
-    <h2>{{venue.name}}'s Admin panel</h2>
-    <h3>Beer manager</h3>
-    <button (click)="logout()">Logout</button>
+    <h2>
+      {{venue.name}}
+    </h2>
+
+    <hr>
+
+    <a [routerLink]="['/']">Home</a>
+    <a (click)="logout()">Logout</a>
   </div>
 
   <app-beer-form [beerToEdit]="beerToEdit"></app-beer-form>
