--- a/src/app/components/beer-list/beer-list.component.html
+++ b/src/app/components/beer-list/beer-list.component.html
@@ -1,5 +1,8 @@
-<h2>All available beers</h2>
-<h3>Select any beer below to edit it</h3>
+<div class="beer-list-title">
+  <h2>All available beers</h2>
+  <p>Select any beer below to edit it</p>
+</div>
+
 <input class="beer-list-search" placeholder="Type to search..." autocomplete="off" type="search" name="search" (keyup)="searchBeer()" [(ngModel)]="searchWord">
 
 <div class="beer-list-container">
