--- a/src/styles.css
+++ b/src/styles.css
@@ -157,9 +157,12 @@ form span.required {
 
 #admin-header {
   margin-bottom: 10px;
+  text-align: right;
 }
 
 #admin-header h2 {
+  text-align: left;
+  margin: 0;
   margin-top: 5px;
 }
 
@@ -168,12 +171,17 @@ form span.required {
   margin: 0;
 }
 
-#admin-header button {
-  background: red;
+#admin-header a {
+  color: white;
   margin-left: 20px;
   width: 100px;
   padding: 0;
-  float: right;
+  text-decoration: underline;
+  text-align: right;
+}
+
+#admin-header hr {
+  margin: 5px;
 }
 
 /* Admin page / beer list */
@@ -185,6 +193,10 @@ form span.required {
   height: 550px;
   overflow-y: scroll;
   margin-bottom: 20px;
+}
+
+.beer-list-title > * {
+  margin: 10px 0;
 }
 
 .beer-list-slot {
@@ -216,6 +228,13 @@ form span.required {
 .login {
   border: 1px solid rgb(192, 192, 192, 0.2);
   padding: 40px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.login a {
+  font-size: 40px;
+  color: white;
 }
 
 /* Home page */
