ready for test deployment

--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div id="admin-header">
+  <div id="admin-header" *ngIf="venue.name">
     <h2>
       {{venue.name}}
     </h2>
