--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 <span id="state-detector"></span>
 
 <!-- logo section -->
-<div id="site-main">
+<div id="site-main" *ngIf="">
   <img src="http://guma.tapman.beer/images/full-logo.png" alt="" width="100%">
 </div>
 
