--- a/src/app/components/beer-card/beer-card.component.html
+++ b/src/app/components/beer-card/beer-card.component.html
@@ -1,4 +1,4 @@
-
+<ng-container *ngIf="beer">
   <div class="beer-title">
     <h1>
       {{beer.name}}
@@ -20,3 +20,4 @@
       {{beer.country}}
     </p>
   </div>
+</ng-container>
